Fix: Alignment Header title

--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
   cursor: pointer;
   color: var(--brand-color);
   flex-grow: 1;
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: bold;
   padding: 1rem 0;
 }
